--- a/Client/Restaurant.Client/Restaurant.Droid/Properties/AndroidManifest.xml
+++ b/Client/Restaurant.Client/Restaurant.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<uses-sdk />
-	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application></application>
 </manifest>
