--- a/Server/Restaurant.Server/Web.config
+++ b/Server/Restaurant.Server/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Restaurant.Server-20160211112751.mdf;Initial Catalog=aspnet-Restaurant.Server-20160211112751;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="RestaurantSqlConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Restaurant.Server-20160211112751.mdf;Initial Catalog=aspnet-Restaurant.Server-20160211112751;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/Models.EntityModel.csdl|res://*/Models.EntityModel.ssdl|res://*/Models.EntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Restaurant.Server-20160211112751.mdf;initial catalog=aspnet-Restaurant.Server-20160211112751;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
