--- a/Client/Restaurant.Client/Restaurant.WinPhone/app.config
+++ b/Client/Restaurant.Client/Restaurant.WinPhone/app.config
@@ -14,6 +14,10 @@
         <assemblyIdentity name="System.Reactive.Linq" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.2.5.0" newVersion="2.2.5.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="XLabs.Serialization" publicKeyToken="d65109b36e5040e4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.5782.15703" newVersion="2.0.5782.15703" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
