--- a/Client/Restaurant.Client/Restaurant.iOS/packages.config
+++ b/Client/Restaurant.Client/Restaurant.iOS/packages.config
@@ -3,6 +3,7 @@
   <package id="akavache" version="4.1.2" targetFramework="xamarinios10" />
   <package id="akavache.core" version="4.1.2" targetFramework="xamarinios10" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="xamarinios10" />
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="xamarinios10" />
   <package id="fusillade" version="0.6.0" targetFramework="xamarinios10" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="xamarinios10" />
@@ -16,5 +17,5 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Splat" version="1.3.3" targetFramework="xamarinios10" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="1.3.3.6323" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="xamarinios10" />
 </packages>
