--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="akavache.core" version="4.1.2" targetFramework="portable45-net45+win8+wp8" />
+  <package id="ExifLib.PCL" version="1.0.1" targetFramework="portable45-net45+win8+wp8" />
   <package id="fusillade" version="0.6.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8" />
@@ -18,5 +19,5 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Splat" version="1.3.3" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="portable45-net45+win8+wp8" />
 </packages>
