--- a/Client/Restaurant.Client/Restaurant.iOS/packages.config
+++ b/Client/Restaurant.Client/Restaurant.iOS/packages.config
@@ -10,6 +10,7 @@
   <package id="Punchclock" version="1.1.1" targetFramework="xamarinios10" />
   <package id="reactiveui" version="6.5.0" targetFramework="xamarinios10" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="xamarinios10" />
+  <package id="refit" version="2.4.1" targetFramework="xamarinios10" />
   <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
@@ -17,5 +18,5 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
   <package id="Splat" version="1.3.3" targetFramework="xamarinios10" />
   <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="xamarinios10" />
 </packages>
