--- a/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -4,7 +4,10 @@
   <package id="akavache.core" version="4.1.2" targetFramework="monoandroid60" />
   <package id="akavache.sqlite3" version="4.1.2" targetFramework="monoandroid60" />
   <package id="fusillade" version="0.6.0" targetFramework="monoandroid60" />
+  <package id="NControl" version="0.8.6" targetFramework="monoandroid60" />
+  <package id="NControl.Controls" version="0.9.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="monoandroid60" />
+  <package id="NGraphics" version="0.4.0" targetFramework="monoandroid60" />
   <package id="Punchclock" version="1.2.0" targetFramework="monoandroid60" />
   <package id="reactiveui" version="6.5.0" targetFramework="monoandroid60" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="monoandroid60" />
@@ -16,7 +19,7 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="monoandroid60" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="monoandroid60" />
   <package id="Splat" version="1.6.2" targetFramework="monoandroid60" />
-  <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="monoandroid60" />
+  <package id="SQLitePCL.raw_basic" version="0.8.6" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="monoandroid50" />
   <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="monoandroid50" />
