--- a/Client/Restaurant.Client/Restaurant/packages.config
+++ b/Client/Restaurant.Client/Restaurant/packages.config
@@ -7,8 +7,11 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wp8" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="portable45-net45+win8+wp8" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="portable45-net45+win8+wp8" />
+  <package id="NControl" version="0.8.6" targetFramework="portable45-net45+win8+wp8" />
+  <package id="NControl.Controls" version="0.9.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Punchclock" version="1.1.1" targetFramework="portable45-net45+win8+wp8" />
+  <package id="NGraphics" version="0.4.0" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Punchclock" version="1.2.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="reactiveui" version="6.5.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="reactiveui-xamforms" version="6.5.0" targetFramework="portable45-net45+win8+wp8" />
@@ -19,6 +22,7 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable45-net45+win8+wp8" />
   <package id="Splat" version="1.6.2" targetFramework="portable45-net45+win8+wp8" />
+  <package id="SQLitePCL.raw_basic" version="0.8.6" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.3.0" targetFramework="portable45-net45+win8+wp8" />
   <package id="Xamarin.Forms" version="2.1.0.6526" targetFramework="portable45-net45+win8+wp8" />
 </packages>
